# gnome-games

./: Makefile.am  NEWS  README  configure.in
blackjack/src/: dialog.cpp
dependencies/: Makefile.am
gnometris/: .gitignore  Makefile.am  blockops.cpp  blockops.h  blocks-cache.cpp  blocks-cache.h  blocks.cpp  blocks.h  preview.cpp  preview.h  renderer.cpp  renderer.h
gnometris/help/: .gitignore
gnomine/help/C/: get-help.page  index.page  introduction.page
icons/: Makefile.am
libgames-support/: GnomeGamesSupport-1.0.vapi  Makefile.am  games-conf.c  games-files.c  games-files.h  games-frame.c  games-runtime.c  games-runtime.h  games-scores-dialog.c  games-scores.c  games-scores.h  games-settings.c  games-show.c  games-stock.c
m4/: .gitignore
mahjongg/: .gitignore  Makefile.am  drawing.c  mahjongg.c  org.gnome.mahjongg.gschema.xml.in
mahjongg/data/: Makefile.am
mahjongg/help/: .gitignore  Makefile.am
mahjongg/help/da/: da.po
mahjongg/help/el/: el.po
mahjongg/src/: Makefile.am  game-view.vala  game.vala  mahjongg.vala
po/: POTFILES.in  POTFILES.skip  be.po  bg.po  ca.po  ca@valencia.po  cs.po  da.po  de.po  en_GB.po  eo.po  es.po  eu.po  fr.po  gl.po  he.po  hu.po  it.po  ja.po  ko.po  lt.po  lv.po  nb.po  nl.po  pa.po  pl.po  pt.po  pt_BR.po  ru.po  sk.po  sl.po  sr.po  sr@latin.po  sv.po  ta.po  te.po  uk.po  zh_CN.po  zh_HK.po  zh_TW.po
same-gnome/: .gitignore  Makefile.am
same-gnome-clutter/: .gitignore  Makefile.am
same-gnome-clutter/src/: main.js
same-gnome/help/: .gitignore
tests/: Makefile.am
tests/libgames-support/: .gitignore  Makefile.am
